fix long names making overflow the header

--- a/src/App.css
+++ b/src/App.css
@@ -35,6 +35,7 @@ form {
   max-width: 576px;
   display: flex;
   font-size: 2rem;
+
   justify-content: space-between;
   & input {
     width: 100%;
@@ -78,6 +79,7 @@ main {
 }
 header {
   max-width: 100vw;
+  overflow: hidden;
   display: flex;
   justify-content: space-between;
   width: 100%;
